us-west-2/echoserver/echoserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: echoserver
spec:
  selector:
    matchLabels:
      app: echoserver
  replicas: 3
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
      - image: 476728484325.dkr.ecr.us-west-2.amazonaws.com/demo:latest
        imagePullPolicy: Always
        name: echoserver
        ports:
        - containerPort: 5000
